Issue list header: Fix double border

--- a/github-dark.css
+++ b/github-dark.css
@@ -250,11 +250,8 @@
   }
   /* invisible border */
   .gisttabs a:not(.selected), .gisttabs a:not(.selected):hover, .timeline-comment-wrapper,
-  .full-commit .commit-desc + .commit-branches, .full-commit .commit-meta {
+  .full-commit .commit-desc + .commit-branches, .full-commit .commit-meta, .list-group-item {
     border-color: transparent !important;
-  }
-  .list-group-item {
-    border: none !important;
   }
   /* === Darken border === */
   pre, table, table th, h1, h2, h3, hr, img, #browser table, #browser table th, #issues .menu ul li,
@@ -737,11 +734,11 @@
   .commit-ref, .cheatsheet h2, .highlight .file-diff-line:hover td, .section a.section-head,
   .dashboard-tabs li a, .full-commit .browse-button, a.function-button, .capped-box h3,
   .expandable-line-num .diff-expander:hover, .boxed-group .heading, #contributors .capped-card h3,
-  .issues-list-actions, .comment-form-head.tabnav, .add-pill-form, .gist .gist-file .gist-meta {
+  .comment-form-head.tabnav, .add-pill-form, .gist .gist-file .gist-meta {
     background: linear-gradient(to bottom, #282828, #181818) !important;
     border-color: #333 !important;
   }
-  .box-header {
+  .box-header, .issues-list-actions {
     background: linear-gradient(to bottom, #282828, #181818) !important;
   }
   .boxed-group > h3, .search-form button, .file-box .meta, .auth-form-header {
